package com.housemate.shared.enums;

public enum ExpenseSplitType {
    EQUAL_SPLIT,
    SHARES,
    EXACT_AMOUNT,
    ADJUSTMENT
}
